Version 0.3
	* Fall back to silly RPM groups if no group data is found.
	* Replace all slashes and spaces in group names to avoid breakage.

Version 0.2
    * Use iterparse to save a whole lotta memory
    * Work with kid-0.6
    * Do not use enumerate() as that breaks on python-2.2
    * Rename repoview into repoview.py
    * Rename __orphans__ to __nogroup__
    * Add a simple manpage
    * Check for repomd.xml before trying to parse it