@@ -1,6 +1,7 @@
 Version 0.3
 	* Fall back to silly RPM groups if no group data is found.
 	* Replace all slashes and spaces in group names to avoid breakage.
+	* Add a -l switch to provide a brief title.
 
 Version 0.2
     * Use iterparse to save a whole lotta memory
